@@ -114,7 +114,7 @@ else
 INCLUDES = $(COMMON_INCS) $(SOUND_INCS)
 gnubg_SOURCES = $(COMMON_SOURCES) $(BR1_SOURCES) $(SOUND_SOURCES) \
 	$(PYTHON_SOURCES) $(TIME_SOURCES)
-gnubg_LDADD = $(COMMON_LIBS) $(SOUND_LIBS) $(PNG_LIBS) @THREAD_LIBS@
+gnubg_LDADD = $(COMMON_LIBS) $(SOUND_LIBS) $(PNG_LIBS)
 
 
 gnubg_DEPENDENCIES = $(COMMON_DEPS)
