@@ -1,3 +1,7 @@
+Thu Dec  7 16:57:14 CET 2006 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c: make CommandImportParty compile without gtk
+
 Thu Dec  7 00:59:04 CET 2006 Christian Anthon <anthon@kiku.dk>
 
 	* various: mingw fixes of autotool changes
